# s2mod-tool

./: .gitignore  Cargo.toml  NOTICE  README.md
src/: convert.rs  lib.rs  main.rs  registry.rs  scanner.rs  script.rs  util.rs
tests/: e2e.rs
tests/fixtures/minimal_mod/: buildings.inf  combinations_test.inf  items_test.inf  objects_test.inf  units.inf
tests/fixtures/minimal_mod/scripts/: test.s2s
tests/fixtures/ref_ext/: objects_ref_ext.inf
tests/fixtures/ref_ext/sys/scripts/: butterflygarden.txt  directref.txt
