[package]
name = "openstranded-s2mod-tool"
version = "0.2.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Convert original Stranded II mods to the .s2mod Content Pack format"
repository = "https://github.com/AvengerAnubis/openstranded-s2mod-tool"
homepage = "https://github.com/AvengerAnubis/openstranded-s2mod-tool"
documentation = "https://docs.rs/openstranded-s2mod-tool"
readme = "README.md"
keywords = ["stranded", "s2mod", "convert", "openstranded", "game-data"]
categories = ["game-development", "development-tools"]

[dependencies]
inf2ron = "0.2"
s2mod-packer = "0.1"
s2s2lua = "0.1"
bmpf2fnt = "0.2"
clap = { version = "4", features = ["derive"], optional = true }
anyhow = "1"
walkdir = "2"
ron = "0.12"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tempfile = { version = "3", optional = true }
b3d2glb = "0.4"
image = "0.25"
pathdiff = "0.2"

[dev-dependencies]
ron = "0.12"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[lib]
name = "openstranded_s2mod_tool"
path = "src/lib.rs"

[[bin]]
name = "openstranded-s2mod-tool"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["clap", "tempfile"]
